# md-viewer

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  start.sh  stop.sh  view_docs.py  view_docs.sh
backend/: check_latex.py  config.py  main.py  requirements.txt  test_html.html  test_md.py
docs/: CLAUDE_REVIEW.md  GEMINI_REVIEW.md  PRODUCT_VISION.md
frontend/: index.html  package-lock.json  package.json  test_katex.cjs  test_katex_macro.cjs  test_katex_node.cjs  test_katex_pup.cjs  vite.config.js
frontend/src/: App.css  App.jsx  index.css
src/md_viewer/: cli.py  template.html
